github section margin bottom whitespace fixed

--- a/css/app.css
+++ b/css/app.css
@@ -478,7 +478,8 @@ p.principal {
 .github {
   transform: translateY(-30px);
   transition: .5s;
-  opacity: 0; }
+  opacity: 0;
+  margin-bottom: 2rem; }
   .github.fade-in {
     transform: translateY(0);
     opacity: 1; }
